--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "geoip2/geoip2": "^3.1",
         "laravel/pint": "^1.0",
         "mockery/mockery": "^1.6",
-        "orchestra/testbench": "9.7.0",
+        "orchestra/testbench": "^9.7.0",
         "phpunit/phpunit": "^11.0"
     },
     "suggest": {
