Add alias and fix capitalization

--- a/composer.json
+++ b/composer.json
@@ -79,7 +79,10 @@
         "laravel": {
             "providers": [
                 "Roomies\\Geolocatable\\GeolocatableServiceProvider"
-            ]
+            ],
+            "aliases": {
+                "Geolocate": "Roomies\\Geolocatable\\Facades\\Geolocate"
+            }
         }
     },
     "minimum-stability": "dev",
