--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,10 @@
     ],
     "require": {
         "php": "^8.3",
-        "illuminate/console": "^11.0",
-        "illuminate/contracts": "^11.0",
-        "illuminate/http": "^11.0",
-        "illuminate/support": "^11.0",
+        "illuminate/console": "^11.0|^12.0",
+        "illuminate/contracts": "^11.0|^12.0",
+        "illuminate/http": "^11.0|^12.0",
+        "illuminate/support": "^11.0|^12.0",
         "spatie/temporary-directory": "^2.2.0"
     },
     "require-dev": {
